--- a/index.html
+++ b/index.html
@@ -4,7 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Cool Site</title>
   </head>
-  <body></body>
+  <body>
+    <header><h1>Hey there I have a cool site</h1></header>
+    <main>
+      <div id="columns">
+        <div id="column-0">&nbsp</div>
+        <div id="column-1">
+          <h1>Why Designers are important!</h1>
+          <p>
+            <b>Lorem Ipsum</b> is simply dummy text of the printing and
+            typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it to make a type specimen book. It has
+            survived not only five centuries, but also the leap into electronic
+            typesetting, remaining essentially unchanged. It was popularised in
+            the 1960s with the release of Letraset sheets containing Lorem Ipsum
+            passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+          <p>
+            <b>Lorem Ipsum</b> is simply dummy text of the printing and
+            typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it to make a type specimen book. It has
+            survived not only five centuries, but also the leap into electronic
+            typesetting, remaining essentially unchanged. It was popularised in
+            the 1960s with the release of Letraset sheets containing
+          </p>
+        </div>
+        <div id="column-2">
+          <section>
+            <img src="//placehold.it/175x100" alt="Placeholder" id="image" />
+          </section>
+          <section>
+            <h3>Another Article</h3>
+            <p>
+              <b>Lorem Ipsum </b> is simply dummy text of the printing and
+              typesetting industry...
+            </p>
+          </section>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
